# ModernMolBERT

./: .Rprofile  .editorconfig  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  ModernMolBERT_README.md  README.md  environment-molformer-only.yml  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
R/: FigX.R  collect_sweep_results.R  eval_figures.R
analysis/: README.md  check_missing_benchmarks_and_rerun.ipynb
analysis/Fig_PacMap/: pacmap_visualization.ipynb  pacmap_visualization_figure.ipynb
analysis/benchmark/: fixup.ipynb  visualizations.ipynb  wrangle_for_dabest.py
analysis/debugging/: selfies_debugger.ipynb
analysis/examples/: count_hf_params.py  count_molformer_params.py  pilot_moleculenet_example.py
analysis/pxr/: pxr_tanimoto_krr.py  pxr_tanimoto_svr_knn.py
analysis/sweep/: 01A_ideal_masking_probability.py  collect_sweep_results.py  fixed_eval_best_models.py
analysis/tokenization/: check_tokenized_lengths.py
analysis/validation/: audit_joblib_metadata.py  audit_max_seq_length.py  rerun_missing_embeddings.py
configs/dataset/: clf_Bioavailability_Ma.yaml  clf_CYP2C9_Veith.yaml  (+16 more)
docs/: baselines.md  datasets.md  evaluation.md  masking_strategies.md  tests.md  tokenizer.md  upload.md
exploratory/: README.md
modernmolbert_best_hetero_span/: config.json  trainer_state.json
notebooks/: 01A_ideal_masking_probability.py  ecfp4_moleculenet_example.py  pilot_moleculenet_example.py  pilot_moleculetnet_example.py
paper/: ModernmolBERT.bib  Notes.docx  comments_ASH.csv  comments_SA.md  macros.tex  main.tex  references.bib  response_to_reviewers.md
results/: sweep_results.csv  sweep_results_aligned.csv  sweep_results_base.csv
scripts/: README.md  align_sweep_result_csvs.py  arrange_panes.py  build_benchmark_results_frames.py  build_paper_results.py  check_hf_tokenizer_matches_local.py  check_pubchem10m_model.sh  check_tokenizer_model_compatibility.py  collect_sweep_results.py  compute_bootstrap_cis.py  compute_property_regression.py  make_ape_token_table.py  make_appendix_table.py  make_loss_curves.py  make_paper_figures.py  patch_model_max_length.py  prepare_moleculenet_core.sh  run_tokenizer_max_merge_2m.sh  tensorboard_pubchem10m.sh  train_chembl36_base_sweep.sh  train_chembl36_base_sweep_standard copy.sh  train_chembl36_base_sweep_standard.sh  train_chembl36_cuda_base_single.sh  train_chembl36_cuda_base_sweep.sh  train_chembl36_cuda_small_single.sh  train_chembl36_cuda_small_single_calibration.sh  train_chembl36_cuda_small_sweep_new.sh  train_chembl36_small_sweep.sh  train_chembl36_small_sweep_standard.sh  train_pubchem10m_mps_base_overnight.sh  train_pubchem10m_tokenizer.sh  wrangle_for_dabest.py  write_model_cards.py
tests/: conftest.py  test_benchmarking_molecular_models.py  test_benchmarking_molecular_models_download_integration.py  test_benchmarking_molecular_models_lightweight_parity.py  test_benchmarking_molecular_models_praski_export.py  test_checkpoint_reload.py  test_chembl36_preparation.py  test_collator.py  test_collect_sweep_results.py  test_compare_praski_tables.py  test_compute_bootstrap_cis.py  test_compute_property_regression.py  test_dabest_plots.py  test_eval_cli_run_benchmark_suite.py  test_eval_clintox.py  test_eval_datasets.py  test_eval_ecfp4.py  test_eval_esol.py  test_eval_featurizers.py  test_eval_hf_smiles.py  test_eval_infrastructure.py  test_eval_modernmolbert_selfies.py  test_eval_modernmolbert_smiles.py  test_eval_moleculenet.py  test_eval_molformer.py  test_eval_registry.py  test_eval_reporting.py  test_eval_retired_paths.py  test_eval_runner.py  test_eval_suite.py  test_eval_task_eval.py  test_eval_tdc_herg.py  test_export_benchmark_corpus.py  test_filter_missing_selfies_symbols.py  test_finite_label_multioutput.py  test_fixed_eval_best_models.py  test_frozen_benchmark_modernmolbert_smoke.py  test_hf_tokenizer.py  test_hf_tokenizer_compatibility.py  test_make_ape_token_table.py  (+24 more)
tmp_eval/: test.csv  train.csv
tokenizer/: chembl36_selfies_2m_ape_max2_min3000.json  chembl36_selfies_2m_ape_max2_min3000.metadata.json  chembl36_selfies_2m_ape_max2_min3000_freq.json  chembl36_selfies_2m_ape_max4_min500_freq.json  chembl36_selfies_2m_ape_max8_min500.metadata.json  chembl36_selfies_2m_ape_max8_min500_freq.json  chembl36_selfies_2m_ape_tokenizer.json  chembl36_selfies_2m_ape_tokenizer.metadata.json  chembl36_selfies_2m_ape_tokenizer_freq.json  chembl36_selfies_2m_benchmark_covered_ape_tokenizer.metadata.json  chembl36_selfies_2m_benchmark_covered_ape_tokenizer_freq.json  chembl36_selfies_2m_min2000.metadata.json  chembl36_smiles_2m_ape_max6_mf3000.json  chembl36_smiles_2m_ape_max6_mf3000.metadata.json  chembl36_smiles_2m_ape_max6_mf3000.validation.txt  chembl36_smiles_2m_ape_max6_mf3000_freq.json  pubchem10m_selfies_ape_tokenizer_1m.json  pubchem10m_selfies_ape_tokenizer_1m.metadata.json  selfies_ape_tokenizer.metadata.json  selfies_ape_tokenizer_1m.metadata.json  selfies_ape_tokenizer_1m_freq.json  selfies_symbol_tokenizer.json  selfies_symbol_tokenizer.metadata.json  tokenizer.json  zinc20_selfies_ape_tokenizer_100k.json  zinc20_selfies_ape_tokenizer_100k.metadata.json  zinc20_selfies_ape_tokenizer_100k_freq.json
(+209 files in other folders)
