[project]
name = "modernmolbert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "huggingface-hub>=1.14.0",
    "numpy>=2.4.4",
    "python-dotenv>=1.0.0",
    "tensorboard>=2.19.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
eval = [
    "deepchem>=2.8.0",
    "rdkit>=2026.3.1",
    "selfies>=2.2.0",
]
eval-prep = [
    "deepchem>=2.8.0",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "rdkit>=2026.3.1",
    "selfies>=2.2.0",
    "tqdm>=4.67.3",
]
eval-transformers = [
    "torch>=2.11.0",
    "transformers>=5.8.0",
]

[project.optional-dependencies]
cuda = [
    "flash-attn",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

include = ["modernmolbert*"]

[tool.pytest.ini_options]
markers = [
    "smoke: optional end-to-end smoke tests",
    "mps: tests intended for Apple MPS",
    "cuda: tests intended for CUDA",
    "model: tests that load trained model checkpoints or external pretrained models",
    "molformer: tests requiring the separate molformer-only environment",
]
