[project]
name = "modernmolbert"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "deepchem>=2.8.0",
    "huggingface-hub>=1.14.0",
    "iprogress>=0.4",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "ogb>=1.3.6",
    "pacmap>=0.9.1",
    "pandas>=3.0.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "rdkit>=2026.3.1",
    "scikit-learn>=1.8.0",
    "selfies>=2.2.0",
    "tensorboard>=2.19.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.0",
    "urllib3>=2.7.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
eval = [
    "dabest>=0.2.5",
    "deepchem>=2.8.0",
    "rdkit>=2026.3.1",
    "selfies>=2.2.0",
]
eval-prep = [
    "deepchem>=2.8.0",
    "ogb>=1.3.6",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pytdc>=0.3.6",
    "rdkit>=2026.3.1",
    "selfies>=2.2.0",
    "tqdm>=4.67.3",
]
pretrain-data = [
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "rdkit>=2026.3.1",
    "selfies>=2.2.0",
]
eval-transformers = [
    "torch>=2.11.0",
    "transformers>=5.8.0",
]
plotting = [
    "colorcet>=3.2.1",
    "datashader>=0.19.1",
]

[project.optional-dependencies]
cuda = [
    "flash-attn",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

include = ["modernmolbert*"]

[tool.setuptools.package-data]
modernmolbert = [
    "eval/benchmarking_molecular_models/config/*.yaml",
    "eval/benchmarking_molecular_models/config/embedding/*.yaml",
]

[tool.pytest.ini_options]
markers = [
    "smoke: optional end-to-end smoke tests",
    "mps: tests intended for Apple MPS",
    "cuda: tests intended for CUDA",
    "model: tests that load trained model checkpoints or external pretrained models",
    "molformer: tests requiring the separate molformer-only environment",
    "network: tests that require network access (e.g. HuggingFace Hub)",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
ignore = [
    "E501",   # line too long — handled by formatter
    "SIM108", # ternary operator — not always clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101", # assert statements are fine in tests
]
"notebooks/**" = [
    "E402", # module-level imports not at top (% cells)
    "F401", # unused imports (exploratory notebooks)
    "B018", # useless expression (cell output idioms)
]

[tool.pyright]
pythonVersion = "3.13"
pythonPlatform = "All"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
ignore = ["notebooks", "scratch"]
reportMissingImports = true
reportMissingTypeStubs = false
